add new datasets with multiple # of features

--- a/Cogs118B Final Project.ipynb
+++ b/Cogs118B Final Project.ipynb
@@ -1834,6 +1834,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 672,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_100=gene.loc[:,fs_ls[-3]]\n",
+    "x_100['group']=gene['group']\n",
+    "x_100\n",
+    "x_50.to_csv('Data/gene_50_features.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 512,
    "metadata": {
     "scrolled": true
